applicationsets/git-dir-generator/apps/pricelist-frontend/pricelist-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
  name: pricelist-ingress
  namespace: pricelist
spec:
  ingressClassName: nginx
  rules:
  - host: pricelist.7f000001.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pricelist
            port:
              number: 8080
